Sekcja Header (320px)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Libre+Baskerville:700|Parisienne&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Portfolio – Krzysztof Pawłowski</title>
 </head>
@@ -12,11 +13,22 @@
 <body>
   <nav class="navbar">
     <div class="hamburger-menu">
-      <div class="hamburger-menu-bar top"></div>
-      <div class="hamburger-menu-bar middle"></div>
-      <div class="hamburger-menu-bar bottom"></div>
+      <div class="hamburger-menu-bar"></div>
     </div>
   </nav>
+
+  <section class="header">
+    <h1 class="greetings">Witam</h1>
+    <h2 class="greetings-sub">na mojej stronie</h2>
+    <p class="description">Pracuję jako grafik komputerowy (operator DTP) i&nbsp;próbuję zostać front-end developerem.</p>
+    <div class="self-picture-wrapper">
+      <img class="self-picture" src="img/ja.jpg" alt="zdjęcie portretowe Krzysztofa Pawłowskiego">
+    </div>
+    <span class="myname">Krzysztof Pawłowski</span>
+    <div class="triangle-small"></div>
+    <div class="triangle-medium"></div>
+    <div class="triangle-big"></div>
+  </section>
 </body>
 
 </html>
