Sekcja "O mnie" 320px

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Libre+Baskerville:700|Parisienne&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
   <title>Portfolio – Krzysztof Pawłowski</title>
 </head>
 
 <body>
+  <!-- MENU -->
   <nav class="navbar">
     <div class="hamburger-menu">
       <div class="hamburger-menu-bar"></div>
     </div>
   </nav>
 
+  <!-- SEKCJA HEADER -->
   <section class="header">
     <h1 class="greetings">Witam</h1>
     <h2 class="greetings-sub">na mojej stronie</h2>
@@ -28,6 +32,33 @@
     <div class="triangle-small"></div>
     <div class="triangle-medium"></div>
     <div class="triangle-big"></div>
+  </section>
+
+  <!-- SEKCJA O MNIE -->
+  <section class="about-me">
+    <h2 class="title">O mnie</h2>
+    <ul class="list">
+      <li class="box">
+        <i class="fas fa-graduation-cap"></i>
+        <span class="category">edukacja</span>
+      </li>
+      <li class="box">
+        <i class="far fa-handshake"></i>
+        <span class="category">praca</span>
+      </li>
+      <li class="box">
+        <i class="fas fa-cogs"></i>
+        <span class="category">umiejętności</span>
+      </li>
+      <li class="box">
+        <i class="fas fa-certificate"></i>
+        <span class="category">kursy, certyfikaty</span>
+      </li>
+      <li class="box">
+        <i class="fas fa-comment"></i>
+        <span class="category">języki</span>
+      </li>
+    </ul>
   </section>
 </body>
 
