Sekcja "Portfolio" 320px

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- SEKCJA O MNIE -->
   <section class="about-me">
-    <h2 class="title">O mnie</h2>
+    <h2 class="sections-title">O mnie</h2>
     <ul class="list">
       <li class="box">
         <i class="fas fa-graduation-cap"></i>
@@ -59,6 +59,153 @@
         <span class="category">języki</span>
       </li>
     </ul>
+  </section>
+
+  <!-- SEKCJA PORTFOLIO -->
+  <section class="portfolio">
+    <h2 class="sections-title">Portfolio</h2>
+    <p class="description">Wszystkie projekty możesz zobaczyć na moim profilu na GitHubie</p>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/LOAN-CALCULATOR" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/kalkulator_pozyczkowy.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Kalkulator Pożyczkowy</h3>
+        <p class="portfolio-example-description">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą kwotę pożyczki i&nbsp;zysk pożyczkodawcy.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/LISTA-KSIAZEK" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/lista_ksiazek.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Lista Książek</h3>
+        <p class="portfolio-example-description">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę książki.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/TO-DOver3" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/lista_zadan.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Lista Zadań</h3>
+        <p class="portfolio-example-description">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania i&nbsp;modyfikowania konkretnego zadania.
+        </p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/LISTA-ZAKUPOW" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/lista_zakupow.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Lista Zakupów</h3>
+        <p class="portfolio-example-description">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania konkretnego produktu.
+        </p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biuro_Podrozy" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/materialize/biuro_podrozy.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Biuro Podróży</h3>
+        <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią, wyszukiwarką i&nbsp;kontaktem.
+        </p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biznes" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/materialize/biznes.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Strona Biznesowa</h3>
+        <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za pomocą Google Maps.
+        </p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/materialize/firma_IT.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Strona IT</h3>
+        <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością założenia konta.
+        </p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/materialize/panel_logowania.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Panel Administratora</h3>
+        <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością dodawania i&nbsp;kasowania zadań, dodawania postów,
+          kategorii&nbsp;i użytkowników.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Projektowanie/" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/materialize/projektowanie.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Projektowanie</h3>
+        <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią projektów podzieloną na kategorie.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/POGODA/" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/pogoda.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Pogoda</h3>
+        <p class="portfolio-example-description">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej lokalizacji z&nbsp;danych ze strony https://api.wunderground.com.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/REDDIT" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/reddit.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">REDDIT</h3>
+        <p class="portfolio-example-description">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i&nbsp;wyborem liczby wyników.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/GITHUB-USERS-FINDER" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/github_wyszukiwarka.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Wyszukiwarka GitHub</h3>
+        <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i najnowsze repozytoria.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/WEEKLY-WEBDEV-CHALLENGE-1" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/WeeklyWebDevChallenge_01.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">WebDevChallenge1</h3>
+        <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="https://kp1976.github.io/WEB_DEV_CHALLENGE_NR37" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/WeeklyWebDevChallenge_37.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">WebDevChallenge37</h3>
+        <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
+      </div>
+    </figure>
+    <figure class="portfolio-example-wrapper">
+      <a class="portfolio-link" href="" target="_blank">
+        <img class="portfolio-example-img" src="img/Portfolio/zgadnij_liczbe.jpg" alt="">
+      </a>
+      <div class="portfolio-example-description-wrapper">
+        <h3 class="portfolio-example-title">Zgadnij liczbę</h3>
+        <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od 1 do 10. Masz na to trzy próby.</p>
+      </div>
+    </figure>
   </section>
 </body>
 
