Sekcja "Kontakt" + footer 320px

--- a/index.html
+++ b/index.html
@@ -207,6 +207,30 @@
       </div>
     </figure>
   </section>
+
+  <!-- SEKCJA KONTAKT -->
+  <section class="contact">
+    <h2 class="sections-title">Kontakt</h2>
+    <i class="fas fa-envelope"></i>
+    <p class="description">krzyszp@wp.pl
+      <br> kpawlowski1976@gmail.com
+    </p>
+    <div class="social-media">
+      <a class="link" href="https://www.facebook.com/KP1976PL" target="_blank">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a class="link" href="https://github.com/KP1976" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+      <a class="link" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p class="copyright">&copy; Krzysztof Pawłowski</p>
+  </footer>
 </body>
 
 </html>
