sekcja "Portfolio" 576px

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </a>
       <div class="portfolio-example-description-wrapper">
         <h3 class="portfolio-example-title">Wyszukiwarka GitHub</h3>
-        <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i najnowsze repozytoria.</p>
+        <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze repozytoria.</p>
       </div>
     </figure>
     <figure class="portfolio-example-wrapper">
@@ -203,7 +203,7 @@
       </a>
       <div class="portfolio-example-description-wrapper">
         <h3 class="portfolio-example-title">Zgadnij liczbę</h3>
-        <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od 1 do 10. Masz na to trzy próby.</p>
+        <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od 1&nbsp;do 10. Masz na to trzy próby.</p>
       </div>
     </figure>
   </section>
