--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
     <div class="hamburger-menu">
       <div class="hamburger-menu-bar"></div>
     </div>
+    <ul class="navbar-list">
+      <li class="menu-items">
+        <a href="#">
+          <i class="fas fa-home"></i>
+          <span>Strona Główna</span>
+        </a>
+      </li>
+      <li class="menu-items">
+        <a href="#aboutme">
+          <i class="fas fa-user-circle"></i>
+          <span>O mnie</span>
+        </a>
+      </li>
+      <li class="menu-items">
+        <a href="#portfolio">
+          <i class="fas fa-th"></i>
+          <span>Portfolio</span>
+        </a>
+      </li>
+      <li class="menu-items">
+        <a href="#contact">
+          <i class="fas fa-envelope"></i>
+          <span>Kontakt</span>
+        </a>
+      </li>
+    </ul>
   </nav>
 
   <!-- SEKCJA HEADER -->
