sekcja "header" 768px

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li class="menu-items">
         <a href="#">
           <i class="fas fa-home"></i>
-          <span>Strona Główna</span>
+          <span>Strona główna</span>
         </a>
       </li>
       <li class="menu-items">
