sekcja "Kontakt" + footer 992px

--- a/index.html
+++ b/index.html
@@ -258,5 +258,7 @@
     <p class="copyright">&copy; Krzysztof Pawłowski</p>
   </footer>
 </body>
+<script src="js/test1.js" type="module"></script>
+<script src="js/test2.js" type="module"></script>
 
 </html>
