sekcja "Kontkat" 1200px

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
       </figure>
       <figure class="portfolio-example-wrapper">
-        <a class="portfolio-link" href="" target="_blank">
+        <a class="portfolio-link" href="https://kp1976.github.io/NUMBER-GUESSER" target="_blank">
           <img class="portfolio-example-img" src="img/Portfolio/zgadnij_liczbe.jpg" alt="">
         </a>
         <div class="portfolio-example-description-wrapper">
