--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 
 <body>
   <!-- MENU -->
+  <input type="checkbox" id="hamburger-menu">
   <nav class="navbar">
-    <div class="hamburger-menu">
-      <div class="hamburger-menu-bar"></div>
-    </div>
     <ul class="navbar-list">
       <li class="menu-items">
         <a href="#">
@@ -45,6 +43,9 @@
       </li>
     </ul>
   </nav>
+  <label for="hamburger-menu" class="hamburger-menu-label">
+    <span class="hamburger-menu-bar"></span>
+  </label>
 
   <!-- SEKCJA HEADER -->
   <section class="header">
@@ -61,7 +62,7 @@
   </section>
 
   <!-- SEKCJA O MNIE -->
-  <section class="about-me">
+  <section class="about-me" id="aboutme">
     <h2 class="sections-title">O mnie</h2>
     <ul class="list">
       <li class="box">
@@ -88,7 +89,7 @@
   </section>
 
   <!-- SEKCJA PORTFOLIO -->
-  <section class="portfolio">
+  <section class="portfolio" id="portfolio">
     <h2 class="sections-title">Portfolio</h2>
     <p class="description">Wszystkie projekty możesz zobaczyć na moim profilu na GitHubie</p>
     <div class="portfolio-grid">
@@ -237,7 +238,7 @@
   </section>
 
   <!-- SEKCJA KONTAKT -->
-  <section class="contact">
+  <section class="contact" id="contact">
     <h2 class="sections-title">Kontakt</h2>
     <i class="fas fa-envelope"></i>
     <p class="description">krzyszp@wp.pl
