Sekcja "O mnie" – Edukacja (320px, 578px)
Po wciśnięciu lewego klawisza myszki na zakładce EDUKACJA rozwija się box z danymi.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Libre+Baskerville:700|Parisienne&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Libre+Baskerville:400,400i,700|Parisienne&amp;subset=latin-ext"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
@@ -69,6 +70,30 @@
         <i class="fas fa-graduation-cap"></i>
         <span class="category">edukacja</span>
       </li>
+      <div class="box-expanded">
+        <div class="box-edu-wrapper">
+          <h3 class="edu-date">wrzesień 1991 r. – maj 1995 r.</h3>
+          <p class="edu-desc">Liceum im. Mieszka I w&nbsp;Świnoujściu</p>
+          <p class="edu-desc2">Profil: ogólny</p>
+        </div>
+        <div class="box-edu-wrapper">
+          <h3 class="edu-date">październik 1995 r. – lipiec 2001 r.</h3>
+          <p class="edu-desc">Politechnika Szczecińska
+            <br>Wydział Informatyki</p>
+          <p class="edu-desc2">Kierunek:
+            <br>
+            <span class="edu-desc-bold">informatyka</span>
+          </p>
+          <p class="edu-desc2">Specjalizacja:
+            <br>
+            <span class="edu-desc-bold">techniki multimedialne</span>
+          </p>
+          <p class="edu-desc2">Tytuł:
+            <br>
+            <span class="edu-desc-bold"> magister inżynier</span>
+          </p>
+        </div>
+      </div>
       <li class="box">
         <i class="far fa-handshake"></i>
         <span class="category">praca</span>
@@ -261,7 +286,8 @@
     <p class="copyright">&copy; Krzysztof Pawłowski</p>
   </footer>
 </body>
-<script src="js/test1.js" type="module"></script>
-<script src="js/test2.js" type="module"></script>
+<script src="js/aboutme.js"></script>
+<!-- <script src="js/test1.js" type="module"></script>
+<script src="js/test2.js" type="module"></script> -->
 
 </html>
