Sekcja "O mnie" poprawki do panelu EDUKACJA (320px, 576px)

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <h2 class="sections-title">O mnie</h2>
     <ul class="list">
       <li class="box">
-        <i class="fas fa-graduation-cap"></i>
-        <span class="category">edukacja</span>
-      </li>
-      <div class="box-expanded">
+        <div class="box-title">
+          <i class="fas fa-graduation-cap"></i>
+          <span class="category">edukacja</span>
+        </div>
         <div class="box-edu-wrapper">
           <h3 class="edu-date">wrzesień 1991 r. – maj 1995 r.</h3>
           <p class="edu-desc">Liceum im. Mieszka I w&nbsp;Świnoujściu</p>
@@ -93,22 +93,30 @@
             <span class="edu-desc-bold"> magister inżynier</span>
           </p>
         </div>
-      </div>
-      <li class="box">
-        <i class="far fa-handshake"></i>
-        <span class="category">praca</span>
       </li>
       <li class="box">
-        <i class="fas fa-cogs"></i>
-        <span class="category">umiejętności</span>
+        <div class="box-title">
+          <i class="far fa-handshake"></i>
+          <span class="category">praca</span>
+        </div>
       </li>
       <li class="box">
-        <i class="fas fa-certificate"></i>
-        <span class="category">kursy, certyfikaty</span>
+        <div class="box-title">
+          <i class="fas fa-cogs"></i>
+          <span class="category">umiejętności</span>
+        </div>
       </li>
       <li class="box">
-        <i class="fas fa-comment"></i>
-        <span class="category">języki</span>
+        <div class="box-title">
+          <i class="fas fa-certificate"></i>
+          <span class="category">kursy, certyfikaty</span>
+        </div>
+      </li>
+      <li class="box">
+        <div class="box-title">
+          <i class="fas fa-comment"></i>
+          <span class="category">języki</span>
+        </div>
       </li>
     </ul>
   </section>
