Przycisk UMIEJĘTNOŚCI (320px, 576px)
Animacja po wciśnięciu przycisku. Zarówno boxa jak i progressbarów.

--- a/index.html
+++ b/index.html
@@ -99,12 +99,128 @@
           <i class="far fa-handshake"></i>
           <span class="category">praca</span>
         </div>
+        <ul class="box-edu-wrapper">
+          <h3 class="edu-date">lipiec 1998 r.</h3>
+          <p class="edu-desc">Pomocnik informatyka</p>
+          <p class="edu-desc2">
+            <span class="edu-desc-bold">Urząd miejski
+              <br>w Świnoujściu</span>
+          </p>
+          <li class="edu-desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          </li>
+          <li class="edu-desc2">instalacja i wymiana kabli sieciowych</li>
+        </ul>
+        <ul class="box-edu-wrapper">
+          <h3 class="edu-date">lipiec – sierpień 1999 r.</h3>
+          <p class="edu-desc">Informatyk Helpdesk</p>
+          <p class="edu-desc2">
+            <span class="edu-desc-bold">Urząd miejski
+              <br>w Świnoujściu</span>
+          </p>
+          <li class="edu-desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          </li>
+          <li class="edu-desc2">instalacja i wymiana kabli sieciowych</li>
+        </ul>
+        <ul class="box-edu-wrapper">
+          <h3 class="edu-date">styczeń 2002 r.</h3>
+          <p class="edu-desc">Grafik komputerowy</p>
+          <p class="edu-desc2">
+            <span class="edu-desc-bold">Wydawnictwo PAIP Warszawa
+            </span>
+          </p>
+          <li class="edu-desc2">skład i łamanie czasopisma</li>
+          <li class="edu-desc2">wysyłka materiałów do drukarni</li>
+        </ul>
+        <ul class="box-edu-wrapper">
+          <h3 class="edu-date">luty – kwiecień 2002 r.</h3>
+          <p class="edu-desc">Operator DTP</p>
+          <p class="edu-desc2">
+            <span class="edu-desc-bold">Wydawnictwo Vision Media
+              <br> Warszawa
+            </span>
+          </p>
+          <li class="edu-desc2">skład i łamanie czasopisma „Technologie i przemysł”</li>
+          <li class="edu-desc2">wysyłka materiałów do drukarni</li>
+        </ul>
+        <ul class="box-edu-wrapper">
+          <h3 class="edu-date">czerwiec 2002 r. – grudzień 2003 r.</h3>
+          <p class="edu-desc">Grafik komputerowy</p>
+          <p class="edu-desc2">
+            <span class="edu-desc-bold">Wydawnictwo
+              <br>Hearst-Marquard Publishing
+              <br> Warszawa
+            </span>
+          </p>
+          <li class="edu-desc2">skład i łamanie czasopisma „Shape”</li>
+        </ul>
+        <ul class="box-edu-wrapper">
+          <h3 class="edu-date">kwiecień 2004 r. –</h3>
+          <p class="edu-desc">Operator DTP</p>
+          <p class="edu-desc2">
+            <span class="edu-desc-bold">Invest Company Corporation
+              <br> Warszawa
+            </span>
+          </p>
+          <li class="edu-desc2">skład i łamanie czasopisma „Piłka Nożna”</li>
+          <li class="edu-desc2">wysyłka materiałów do drukarni</li>
+          <li class="edu-desc2">tworzenie infografik</li>
+          <li class="edu-desc2">obróbka zdjęć</li>
+          <li class="edu-desc2">tworzenie okładki (w&nbsp;zastępstwie)</li>
+        </ul>
       </li>
       <li class="box">
         <div class="box-title">
           <i class="fas fa-cogs"></i>
           <span class="category">umiejętności</span>
         </div>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">adobe photoshop</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">adobe indesign</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">adobe illustrator</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">quarkxpress</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">html</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">css</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">javascript (jquery)</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="edu-desc">ms office</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
       </li>
       <li class="box">
         <div class="box-title">
@@ -119,6 +235,7 @@
         </div>
       </li>
     </ul>
+
   </section>
 
   <!-- SEKCJA PORTFOLIO -->
@@ -294,7 +411,7 @@
     <p class="copyright">&copy; Krzysztof Pawłowski</p>
   </footer>
 </body>
-<script src="js/aboutme.js"></script>
+<script src="js/boxes.js"></script>
 <!-- <script src="js/test1.js" type="module"></script>
 <script src="js/test2.js" type="module"></script> -->
 
