Poprawione nazwy klas

--- a/index.html
+++ b/index.html
@@ -67,105 +67,107 @@
     <h2 class="sections-title">O mnie</h2>
     <ul class="list">
       <li class="box">
+        <!-- EDUKACJA -->
         <div class="box-title">
           <i class="fas fa-graduation-cap"></i>
           <span class="category">edukacja</span>
         </div>
-        <div class="box-edu-wrapper">
-          <h3 class="edu-date">wrzesień 1991 r. – maj 1995 r.</h3>
-          <p class="edu-desc">Liceum im. Mieszka I w&nbsp;Świnoujściu</p>
-          <p class="edu-desc2">Profil: ogólny</p>
+        <div class="box-wrapper">
+          <h3 class="date">wrzesień 1991 r. – maj 1995 r.</h3>
+          <p class="desc">Liceum im. Mieszka I w&nbsp;Świnoujściu</p>
+          <p class="desc2">Profil: ogólny</p>
         </div>
-        <div class="box-edu-wrapper">
-          <h3 class="edu-date">październik 1995 r. – lipiec 2001 r.</h3>
-          <p class="edu-desc">Politechnika Szczecińska
+        <div class="box-wrapper">
+          <h3 class="date">październik 1995 r. – lipiec 2001 r.</h3>
+          <p class="desc">Politechnika Szczecińska
             <br>Wydział Informatyki</p>
-          <p class="edu-desc2">Kierunek:
+          <p class="desc2">Kierunek:
             <br>
-            <span class="edu-desc-bold">informatyka</span>
+            <span class="desc-bold">informatyka</span>
           </p>
-          <p class="edu-desc2">Specjalizacja:
+          <p class="desc2">Specjalizacja:
             <br>
-            <span class="edu-desc-bold">techniki multimedialne</span>
+            <span class="desc-bold">techniki multimedialne</span>
           </p>
-          <p class="edu-desc2">Tytuł:
+          <p class="desc2">Tytuł:
             <br>
-            <span class="edu-desc-bold"> magister inżynier</span>
+            <span class="desc-bold"> magister inżynier</span>
           </p>
         </div>
       </li>
       <li class="box">
+        <!-- PRACA -->
         <div class="box-title">
           <i class="far fa-handshake"></i>
           <span class="category">praca</span>
         </div>
-        <ul class="box-edu-wrapper">
-          <h3 class="edu-date">lipiec 1998 r.</h3>
-          <p class="edu-desc">Pomocnik informatyka</p>
-          <p class="edu-desc2">
-            <span class="edu-desc-bold">Urząd miejski
+        <ul class="box-wrapper">
+          <h3 class="date">lipiec 1998 r.</h3>
+          <p class="desc">Pomocnik informatyka</p>
+          <p class="desc2">
+            <span class="desc-bold">Urząd miejski
               <br>w Świnoujściu</span>
           </p>
-          <li class="edu-desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          <li class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
           </li>
-          <li class="edu-desc2">instalacja i wymiana kabli sieciowych</li>
+          <li class="desc2">instalacja i wymiana kabli sieciowych</li>
         </ul>
-        <ul class="box-edu-wrapper">
-          <h3 class="edu-date">lipiec – sierpień 1999 r.</h3>
-          <p class="edu-desc">Informatyk Helpdesk</p>
-          <p class="edu-desc2">
-            <span class="edu-desc-bold">Urząd miejski
+        <ul class="box-wrapper">
+          <h3 class="date">lipiec – sierpień 1999 r.</h3>
+          <p class="desc">Informatyk Helpdesk</p>
+          <p class="desc2">
+            <span class="desc-bold">Urząd miejski
               <br>w Świnoujściu</span>
           </p>
-          <li class="edu-desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          <li class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
           </li>
-          <li class="edu-desc2">instalacja i wymiana kabli sieciowych</li>
+          <li class="desc2">instalacja i wymiana kabli sieciowych</li>
         </ul>
-        <ul class="box-edu-wrapper">
-          <h3 class="edu-date">styczeń 2002 r.</h3>
-          <p class="edu-desc">Grafik komputerowy</p>
-          <p class="edu-desc2">
-            <span class="edu-desc-bold">Wydawnictwo PAIP Warszawa
+        <ul class="box-wrapper">
+          <h3 class="date">styczeń 2002 r.</h3>
+          <p class="desc">Grafik komputerowy</p>
+          <p class="desc2">
+            <span class="desc-bold">Wydawnictwo PAIP Warszawa
             </span>
           </p>
-          <li class="edu-desc2">skład i łamanie czasopisma</li>
-          <li class="edu-desc2">wysyłka materiałów do drukarni</li>
+          <li class="desc2">skład i łamanie czasopisma</li>
+          <li class="desc2">wysyłka materiałów do drukarni</li>
         </ul>
-        <ul class="box-edu-wrapper">
-          <h3 class="edu-date">luty – kwiecień 2002 r.</h3>
-          <p class="edu-desc">Operator DTP</p>
-          <p class="edu-desc2">
-            <span class="edu-desc-bold">Wydawnictwo Vision Media
+        <ul class="box-wrapper">
+          <h3 class="date">luty – kwiecień 2002 r.</h3>
+          <p class="desc">Operator DTP</p>
+          <p class="desc2">
+            <span class="desc-bold">Wydawnictwo Vision Media
               <br> Warszawa
             </span>
           </p>
-          <li class="edu-desc2">skład i łamanie czasopisma „Technologie i przemysł”</li>
-          <li class="edu-desc2">wysyłka materiałów do drukarni</li>
+          <li class="desc2">skład i łamanie czasopisma „Technologie i przemysł”</li>
+          <li class="desc2">wysyłka materiałów do drukarni</li>
         </ul>
-        <ul class="box-edu-wrapper">
-          <h3 class="edu-date">czerwiec 2002 r. – grudzień 2003 r.</h3>
-          <p class="edu-desc">Grafik komputerowy</p>
-          <p class="edu-desc2">
-            <span class="edu-desc-bold">Wydawnictwo
+        <ul class="box-wrapper">
+          <h3 class="date">czerwiec 2002 r. – grudzień 2003 r.</h3>
+          <p class="desc">Grafik komputerowy</p>
+          <p class="desc2">
+            <span class="desc-bold">Wydawnictwo
               <br>Hearst-Marquard Publishing
               <br> Warszawa
             </span>
           </p>
-          <li class="edu-desc2">skład i łamanie czasopisma „Shape”</li>
+          <li class="desc2">skład i łamanie czasopisma „Shape”</li>
         </ul>
-        <ul class="box-edu-wrapper">
-          <h3 class="edu-date">kwiecień 2004 r. –</h3>
-          <p class="edu-desc">Operator DTP</p>
-          <p class="edu-desc2">
-            <span class="edu-desc-bold">Invest Company Corporation
+        <ul class="box-wrapper">
+          <h3 class="date">kwiecień 2004 r. –</h3>
+          <p class="desc">Operator DTP</p>
+          <p class="desc2">
+            <span class="desc-bold">Invest Company Corporation
               <br> Warszawa
             </span>
           </p>
-          <li class="edu-desc2">skład i łamanie czasopisma „Piłka Nożna”</li>
-          <li class="edu-desc2">wysyłka materiałów do drukarni</li>
-          <li class="edu-desc2">tworzenie infografik</li>
-          <li class="edu-desc2">obróbka zdjęć</li>
-          <li class="edu-desc2">tworzenie okładki (w&nbsp;zastępstwie)</li>
+          <li class="desc2">skład i łamanie czasopisma „Piłka Nożna”</li>
+          <li class="desc2">wysyłka materiałów do drukarni</li>
+          <li class="desc2">tworzenie infografik</li>
+          <li class="desc2">obróbka zdjęć</li>
+          <li class="desc2">tworzenie okładki (w&nbsp;zastępstwie)</li>
         </ul>
       </li>
       <li class="box">
@@ -174,49 +176,49 @@
           <span class="category">umiejętności</span>
         </div>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">adobe photoshop</p>
+          <p class="desc">adobe photoshop</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
         </ul>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">adobe indesign</p>
+          <p class="desc">adobe indesign</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
         </ul>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">adobe illustrator</p>
+          <p class="desc">adobe illustrator</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
         </ul>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">quarkxpress</p>
+          <p class="desc">quarkxpress</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
         </ul>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">html</p>
+          <p class="desc">html</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
         </ul>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">css</p>
+          <p class="desc">css</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
         </ul>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">javascript (jquery)</p>
+          <p class="desc">javascript (jquery)</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
         </ul>
         <ul class="box-skills-languages-wrapper">
-          <p class="edu-desc">ms office</p>
+          <p class="desc">ms office</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
@@ -227,6 +229,14 @@
           <i class="fas fa-certificate"></i>
           <span class="category">kursy, certyfikaty</span>
         </div>
+        <ul class="box-wrapper">
+          <h3 class="date">październik 2001 r.</h3>
+          <p class="desc">Kurs podstawowy na&nbsp;Operatora DTP</p>
+          <p class="desc">Kurs zaawansowany na&nbsp;Operatora DTP</p>
+          <p class="desc2">
+            <span class="desc-bold">Ośrodek szkoleniowy Publishing Institute</span>
+          </p>
+        </ul>
       </li>
       <li class="box">
         <div class="box-title">
