Poprawiony plik boxes.js i zrobione boxy w sekcji "O mnie" w rozdzielczości do 767px

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         </ul>
       </li>
       <li class="box">
+        <!-- UMIEJĘTNOŚCI -->
         <div class="box-title">
           <i class="fas fa-cogs"></i>
           <span class="category">umiejętności</span>
@@ -225,6 +226,7 @@
         </ul>
       </li>
       <li class="box">
+        <!-- KURSY, CERTYFIKATY -->
         <div class="box-title">
           <i class="fas fa-certificate"></i>
           <span class="category">kursy, certyfikaty</span>
@@ -237,12 +239,39 @@
             <span class="desc-bold">Ośrodek szkoleniowy Publishing Institute</span>
           </p>
         </ul>
+        <ul class="box-wrapper">
+          <h3 class="date">listopad 2001 r.</h3>
+          <p class="desc">Certyfikat Operatora DTP</p>
+          <p class="desc2">
+            <span class="desc-bold">Ośrodek szkoleniowy Publishing Institute</span>
+          </p>
+        </ul>
+        <ul class="box-wrapper">
+          <h3 class="date">22 listopada 2016 r.</h3>
+          <p class="desc">Certyfikat internetowych rewolucji (kurs marketingu internetowego)</p>
+          <p class="desc2">
+            <span class="desc-bold">Google</span>
+          </p>
+        </ul>
       </li>
       <li class="box">
+        <!-- JĘZYKI -->
         <div class="box-title">
           <i class="fas fa-comment"></i>
           <span class="category">języki</span>
         </div>
+        <ul class="box-skills-languages-wrapper">
+          <p class="desc">polski</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
+        <ul class="box-skills-languages-wrapper">
+          <p class="desc">angielski</p>
+          <div class="bar">
+            <div class="bar-ball"></div>
+          </div>
+        </ul>
       </li>
     </ul>
 
