--- a/index.html
+++ b/index.html
@@ -176,54 +176,54 @@
           <i class="fas fa-cogs"></i>
           <span class="category">umiejętności</span>
         </div>
-        <ul class="box-skills-languages-wrapper">
+        <div class="box-skills-languages-wrapper">
           <p class="desc">adobe photoshop</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">adobe indesign</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">adobe illustrator</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">quarkxpress</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">html</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">css</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">javascript (jquery)</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">ms office</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
+        </div>
       </li>
       <li class="box">
         <!-- KURSY, CERTYFIKATY -->
@@ -231,28 +231,28 @@
           <i class="fas fa-certificate"></i>
           <span class="category">kursy, certyfikaty</span>
         </div>
-        <ul class="box-wrapper">
+        <div class="box-wrapper">
           <h3 class="date">październik 2001 r.</h3>
           <p class="desc">Kurs podstawowy na&nbsp;Operatora DTP</p>
           <p class="desc">Kurs zaawansowany na&nbsp;Operatora DTP</p>
           <p class="desc2">
             <span class="desc-bold">Ośrodek szkoleniowy Publishing Institute</span>
           </p>
-        </ul>
-        <ul class="box-wrapper">
+        </div>
+        <div class="box-wrapper">
           <h3 class="date">listopad 2001 r.</h3>
           <p class="desc">Certyfikat Operatora DTP</p>
           <p class="desc2">
             <span class="desc-bold">Ośrodek szkoleniowy Publishing Institute</span>
           </p>
-        </ul>
-        <ul class="box-wrapper">
+        </div>
+        <div class="box-wrapper">
           <h3 class="date">22 listopada 2016 r.</h3>
           <p class="desc">Certyfikat internetowych rewolucji (kurs marketingu internetowego)</p>
           <p class="desc2">
             <span class="desc-bold">Google</span>
           </p>
-        </ul>
+        </div>
       </li>
       <li class="box">
         <!-- JĘZYKI -->
@@ -260,21 +260,20 @@
           <i class="fas fa-comment"></i>
           <span class="category">języki</span>
         </div>
-        <ul class="box-skills-languages-wrapper">
+        <div class="box-skills-languages-wrapper">
           <p class="desc">polski</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
-        <ul class="box-skills-languages-wrapper">
+        </div>
+        <div class="box-skills-languages-wrapper">
           <p class="desc">angielski</p>
           <div class="bar">
             <div class="bar-ball"></div>
           </div>
-        </ul>
+        </div>
       </li>
     </ul>
-
   </section>
 
   <!-- SEKCJA PORTFOLIO -->
@@ -446,9 +445,233 @@
     </div>
   </section>
 
+  <!-- STOPKA -->
   <footer class="footer">
     <p class="copyright">&copy; Krzysztof Pawłowski</p>
   </footer>
+
+  <!-- MODALE -->
+  <!-- EDUKACJA -->
+  <div class="modal modal-edu">
+    <div class="modal-container">
+      <div class="box-title">
+        <i class="fas fa-graduation-cap"></i>
+        <span class="category">edukacja</span>
+      </div>
+      <div class="modal-box-wrapper">
+        <h3 class="date">wrzesień 1991 r. – maj 1995 r.</h3>
+        <p class="desc">Liceum im. Mieszka I w&nbsp;Świnoujściu</p>
+        <p class="desc2">Profil: ogólny</p>
+      </div>
+      <div class="modal-box-wrapper">
+        <h3 class="date">październik 1995 r. – lipiec 2001 r.</h3>
+        <p class="desc">Politechnika Szczecińska
+          <br>Wydział Informatyki</p>
+        <p class="desc2">Kierunek:
+          <br>
+          <span class="desc-bold">informatyka</span>
+        </p>
+        <p class="desc2">Specjalizacja:
+          <br>
+          <span class="desc-bold">techniki multimedialne</span>
+        </p>
+        <p class="desc2">Tytuł:
+          <br>
+          <span class="desc-bold"> magister inżynier</span>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- PRACA -->
+  <div class="modal modal-work">
+    <div class="modal-container">
+      <div class="box-title">
+        <i class="far fa-handshake"></i>
+        <span class="category">praca</span>
+      </div>
+      <ul class="modal-box-wrapper">
+        <h3 class="date">lipiec 1998 r.</h3>
+        <p class="desc">Pomocnik informatyka</p>
+        <p class="desc2">
+          <span class="desc-bold">Urząd miejski
+            <br>w Świnoujściu</span>
+        </p>
+        <li class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+        </li>
+        <li class="desc2">instalacja i wymiana kabli sieciowych</li>
+      </ul>
+      <ul class="modal-box-wrapper">
+        <h3 class="date">lipiec – sierpień 1999 r.</h3>
+        <p class="desc">Informatyk Helpdesk</p>
+        <p class="desc2">
+          <span class="desc-bold">Urząd miejski
+            <br>w Świnoujściu</span>
+        </p>
+        <li class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+        </li>
+        <li class="desc2">instalacja i wymiana kabli sieciowych</li>
+      </ul>
+      <ul class="modal-box-wrapper">
+        <h3 class="date">styczeń 2002 r.</h3>
+        <p class="desc">Grafik komputerowy</p>
+        <p class="desc2">
+          <span class="desc-bold">Wydawnictwo PAIP Warszawa
+          </span>
+        </p>
+        <li class="desc2">skład i łamanie czasopisma</li>
+        <li class="desc2">wysyłka materiałów do drukarni</li>
+      </ul>
+      <ul class="modal-box-wrapper">
+        <h3 class="date">luty – kwiecień 2002 r.</h3>
+        <p class="desc">Operator DTP</p>
+        <p class="desc2">
+          <span class="desc-bold">Wydawnictwo Vision Media
+            <br> Warszawa
+          </span>
+        </p>
+        <li class="desc2">skład i łamanie czasopisma „Technologie&nbsp;i&nbsp;przemysł”</li>
+        <li class="desc2">wysyłka materiałów do drukarni</li>
+      </ul>
+      <ul class="modal-box-wrapper">
+        <h3 class="date">czerwiec 2002 r. – grudzień 2003 r.</h3>
+        <p class="desc">Grafik komputerowy</p>
+        <p class="desc2">
+          <span class="desc-bold">Wydawnictwo
+            <br>Hearst-Marquard Publishing
+            <br> Warszawa
+          </span>
+        </p>
+        <li class="desc2">skład i łamanie czasopisma „Shape”</li>
+      </ul>
+      <ul class="modal-box-wrapper">
+        <h3 class="date">kwiecień 2004 r. –</h3>
+        <p class="desc">Operator DTP</p>
+        <p class="desc2">
+          <span class="desc-bold">Invest Company Corporation
+            <br> Warszawa
+          </span>
+        </p>
+        <li class="desc2">skład i łamanie czasopisma „Piłka Nożna”</li>
+        <li class="desc2">wysyłka materiałów do drukarni</li>
+        <li class="desc2">tworzenie infografik</li>
+        <li class="desc2">obróbka zdjęć</li>
+        <li class="desc2">tworzenie okładki (w&nbsp;zastępstwie)</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- UMIEJĘTNOŚCI -->
+  <div class="modal modal-skills">
+    <div class="modal-container">
+      <div class="box-title">
+        <i class="fas fa-cogs"></i>
+        <span class="category">umiejętności</span>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">adobe photoshop</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">adobe indesign</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">adobe illustrator</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">quarkxpress</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">html</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">css</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">javascript (jquery)</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">ms office</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- KURSY, CERTYFIKATY -->
+  <div class="modal modal-courses">
+    <div class="modal-container">
+      <div class="box-title">
+        <i class="fas fa-certificate"></i>
+        <span class="category">kursy, certyfikaty</span>
+      </div>
+      <div class="modal-box-wrapper">
+        <h3 class="date">październik 2001 r.</h3>
+        <p class="desc">Kurs podstawowy na&nbsp;Operatora DTP</p>
+        <p class="desc">Kurs zaawansowany na&nbsp;Operatora DTP</p>
+        <p class="desc2">
+          <span class="desc-bold">Ośrodek szkoleniowy Publishing Institute</span>
+        </p>
+      </div>
+      <div class="modal-box-wrapper">
+        <h3 class="date">listopad 2001 r.</h3>
+        <p class="desc">Certyfikat Operatora DTP</p>
+        <p class="desc2">
+          <span class="desc-bold">Ośrodek szkoleniowy Publishing Institute</span>
+        </p>
+      </div>
+      <div class="modal-box-wrapper">
+        <h3 class="date">22 listopada 2016 r.</h3>
+        <p class="desc">Certyfikat internetowych rewolucji (kurs marketingu internetowego)</p>
+        <p class="desc2">
+          <span class="desc-bold">Google</span>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- JĘZYKI -->
+  <div class="modal modal-languages">
+    <div class="modal-container">
+      <div class="box-title">
+        <i class="fas fa-comment"></i>
+        <span class="category">języki</span>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">polski</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+      <div class="modal-box-skills-languages-wrapper">
+        <p class="desc">angielski</p>
+        <div class="bar">
+          <div class="bar-ball"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 <script src="js/boxes.js"></script>
 
