--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </p>
           <p class="desc2">Specjalizacja:
             <br>
-            <span class="desc-bold">techniki mdivtimedialne</span>
+            <span class="desc-bold">techniki multimedialne</span>
           </p>
           <p class="desc2">Tytuł:
             <br>
@@ -476,7 +476,7 @@
         </p>
         <p class="desc2">Specjalizacja:
           <br>
-          <span class="desc-bold">techniki mdivtimedialne</span>
+          <span class="desc-bold">techniki multimedialne</span>
         </p>
         <p class="desc2">Tytuł:
           <br>
